--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-target/
+/jenkins-releasequeue/target/
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
@@ -6,3 +6,4 @@ pom.xml.next
 release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
+/jenkins-releasequeue/work/
