--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 work/
+
+# Wercker specific folders
+_builds/
+_steps/
+_projects/
