--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
   <version>1.0-SNAPSHOT</version>
   <packaging>hpi</packaging>
 
-  <name>ReleaseQueue Publisher Plugin</name>
+  <name>ReleaseQueue Plugin</name>
   <description>Push packages to ReleaseQueue</description>
   <url>https://wiki.jenkins-ci.org/display/JENKINS/ReleaseQueue+Publisher+Plugin</url>
   <licenses>
@@ -56,6 +56,24 @@
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpmime</artifactId>
             <version>4.4.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.10.19</version>
+        </dependency>
+        <dependency>
+            <groupId>net.java.dev.jna</groupId>
+            <artifactId>jna</artifactId>
+            <version>3.4.0</version>
+            <scope>test</scope>
+            <type>pom</type>
+        </dependency>
+        <dependency>
+            <groupId>org.kohsuke.stapler</groupId>
+            <artifactId>stapler</artifactId>
+            <version>1.231</version>
+            <type>jar</type>
         </dependency>
     </dependencies>
 </project>
